--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Weather App</title>
 	 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
       <link href="css/style.css" rel="stylesheet">
